# quests-api-fastapi

./: README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/v1/: alembic.ini  main.py
app/v1/database/: config.py  database.py  functions.py  schemas.py
app/v1/exceptions/: exceptions.py
app/v1/migrations/: env.py
app/v1/migrations/versions/: 3dc6944da55e_task_order.py  d69050a7b70e_initial.py
app/v1/models/: common.py
app/v1/models/enums/: quest_status.py  task_type.py
app/v1/routers/quests/: controller.py  router.py
app/v1/routers/quests/models/: quest.py  tasks.py
